HotpornfileOrg: -updated handling -refs thread 93073
-removed Number(String) or Number(Number) constructors that are marked for removal
-replaced Number.compareTo with CompareUtils

git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@47600 ebf7c1c2-ba36-0410-9fe8-c592906822b4

Former-commit-id: 6de2f6aeaec1adbaf1ff9c00bbdf4bda181ec499