@@ -157,7 +157,7 @@ public class JavaScriptEngineFactory {
          * @return the value of the property (may be null), or NOT_FOUND
          */
         public synchronized Object get(int index, Scriptable start) {
-            Integer key = new Integer(index);
+            final Integer key = Integer.valueOf(index);
             if (indexedProps.containsKey(index)) {
                 return indexedProps.get(key);
             } else {
@@ -194,7 +194,7 @@ public class JavaScriptEngineFactory {
          * @return true if and only if the property was found in the object
          */
         public synchronized boolean has(int index, Scriptable start) {
-            Integer key = new Integer(index);
+            final Integer key = Integer.valueOf(index);
             return indexedProps.containsKey(key);
         }
 
@@ -241,7 +241,7 @@ public class JavaScriptEngineFactory {
         public void put(int index, Scriptable start, Object value) {
             if (start == this) {
                 synchronized (this) {
-                    indexedProps.put(new Integer(index), value);
+                    indexedProps.put(Integer.valueOf(index), value);
                 }
             } else {
                 start.put(index, start, value);
@@ -278,7 +278,7 @@ public class JavaScriptEngineFactory {
          *            the numeric index for the property
          */
         public void delete(int index) {
-            indexedProps.remove(new Integer(index));
+            indexedProps.remove(Integer.valueOf(index));
         }
 
         /**
